--- a/AI project.ipynb
+++ b/AI project.ipynb
@@ -50,7 +50,7 @@
     "        self.label2 = Label(self.frame3,text=\"\\n\")\n",
     "        self.label2.pack()\n",
     "        self.text=Text(self.frame3)\n",
-    "        self.text.insert(END, \"If\\ni\\ndie\\ntrying\\natleast\\ni\\ntried\\n\")\n",
+    "        self.text.insert(END, \"If\\ni\\ndie\\ntrying\\natleast\\ni")\n",
     "        self.text.pack()\n",
     "        self.frame3.pack()\n",
     "        \n",
